@startuml

entity PersInf {
    +id: UUID
    +Surname: varchar(40)
    +Name: varchar(40)
    +birthYear: int
    +phoneNumber: varchar(40)
    +email: varchar(40)
}

entity ProfInf {
    +id: UUID
    +PersId: int FK(PersInf(id))
    +skillName: varchar(40)
    +skillDescription: varchar
    +cost: numeric(6,2)
    +persDescription: varchar
    +exp: numeric(4,2)
}

entity SkillExchange{
    +exchangeId: UUID
    +skillOffered: String
    +userOffering: UUID
    +userRequesting: UUID
}

entity Review {
    +reviewId: UUID
    +rating: numeric(4,2)
    +comment: varchar
    +reviewer: UUID
    +userEvaluated: UUID
}

entity Transaction {
    +transactionId: UUID
    +dateTime: DateTime
    +status: varchar(30)
    +changeId: int FK(SkillExchange(exchangeId))
}



PersInf ||--o{ ProfInf : "OneToMany"
SkillExchange ||--|| PersInf : "OneToOne"
SkillExchange ||--|| ProfInf : "OneToOne"
SkillExchange ||--|| ProfInf : "OneToOne"
Review ||--|| ProfInf : "OneToOne"
Review ||--|| PersInf : "OneToOne"
Transaction ||--|| SkillExchange : "OneToOne"

@enduml